--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <script type="text/ng-template" id="addEndpointModal.html">
       <form class="form">
         <div class="modal-header">
-          <h3 class="modal-title">{{message}}</h3>
+          <h3 class="modal-title">{{username}}{{message}}</h3>
         </div>
         <div class="modal-body">
           <table class="table table-striped">
@@ -131,6 +131,7 @@
   <script src="./lib/angular.min.js"></script>
   <script src="./lib/ui-bootstrap-tpls-0.13.0.min.js"></script>
   <script src="./lib/angular-animate.min.js"></script>
+  <script src="./bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="app.js"></script>
   <!-- <script src="//code.angularjs.org/1.2.2/angular-cookies.js"></script> -->
 </body>
