added testing and fixed a few bugs

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-
+<h2>{{username}}</h2>
   <div ng-controller="endpointsController">
-
     <script type="text/ng-template" id="myModalContent.html">
       <form class="form">
         <div class="modal-header">
